--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -6,7 +6,7 @@ on:
       - "master"
       - "release-*"
     paths:
-      - "web-client/**/*"
+      - "web-client/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
