--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -7,6 +7,8 @@ on:
       - "release-*"
     paths:
       - "web-client/**"
+  # TODO: remove after testing
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
