fix: tar extrack steps
Signed-off-by: K3rnelPan1c <69395733+k3rnelpan1c-dev@users.noreply.github.com>

--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -64,8 +64,8 @@ jobs:
 
       - name: "Extract Web-Client Tar"
         run: |-
-          mkdir container/jellyfin-web
-          tar -xzf jellyfin-web_portable.tar.gz -C container/jellyfin-web
+          mkdir web-client/jellyfin-web
+          tar -xzf jellyfin-web_portable.tar.gz -C web-client/jellyfin-web
 
       - name: "Build Container Image"
         id: containerBuild
