--- a/.github/workflows/receiver.yaml
+++ b/.github/workflows/receiver.yaml
@@ -34,6 +34,8 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.JF_BOT_TOKEN }}
 
       # check if branch exists and branch of master if not
       - name: "Handle Branching"
