test: if now GH token is sufficient
Signed-off-by: K3rnelPan1c <69395733+k3rnelpan1c-dev@users.noreply.github.com>

--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -90,5 +90,5 @@ jobs:
           image: ${{ steps.containerBuild.outputs.image }}
           tags: ${{ steps.containerBuild.outputs.tags }}
           registry: ghcr.io/${{ github.repository_owner }}
-          username: ${{ secrets.JF_BOT_USER }}
-          password: ${{ secrets.JF_BOT_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
