fix: loop variable
Signed-off-by: K3rnelPan1c <69395733+k3rnelpan1c-dev@users.noreply.github.com>

--- a/.github/workflows/_meta-containerBuild.yaml
+++ b/.github/workflows/_meta-containerBuild.yaml
@@ -79,7 +79,7 @@ jobs:
           done
 
           for LABEL in ${{ inputs.imageLabels }}; do
-            IMAGE_TAGS="--label ${LABEL} ${IMAGE_LABELS}"
+            IMAGE_LABELS="--label ${LABEL} ${IMAGE_LABELS}"
           done
 
           docker buildx build \
