--- a/.github/workflows/_meta-containerBuild.yaml
+++ b/.github/workflows/_meta-containerBuild.yaml
@@ -48,9 +48,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: "Install qemu dependency"
-        run: |-
-          sudo apt-get update
-          sudo apt-get install -y qemu-user-static
+        uses: docker/setup-qemu-action@v2
 
       - name: "Checkout Container Repository"
         uses: actions/checkout@v3
