--- a/.github/workflows/_meta-containerBuild.yaml
+++ b/.github/workflows/_meta-containerBuild.yaml
@@ -50,6 +50,9 @@ jobs:
       - name: "Install qemu dependency"
         uses: docker/setup-qemu-action@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: "Checkout Container Repository"
         uses: actions/checkout@v3
         with:
