fix: buildx output type
Signed-off-by: K3rnelPan1c <69395733+k3rnelpan1c-dev@users.noreply.github.com>

--- a/.github/workflows/_meta-containerBuild.yaml
+++ b/.github/workflows/_meta-containerBuild.yaml
@@ -84,6 +84,7 @@ jobs:
           done
 
           docker buildx build \
+            --output type=image \
             --file "jellyfin-code/${{ inputs.containerfile }}" \
             --platform linux/amd64,linux/arm64/v8,linux/arm/v7 \
             ${IMAGE_TAGS} \
