--- a/.github/workflows/_meta-containerBuild.yaml
+++ b/.github/workflows/_meta-containerBuild.yaml
@@ -13,10 +13,18 @@ on:
         type: string
         required: true
         description: "The build context in which to find the metaValues YAML as well as all container context relevant files."
-      imageTags:
+      imageName:
         type: string
         required: true
-        description: "A space separated list of tags the container image should be available under."
+        description: "The name that the container image should be available under."
+      imageTag:
+        type: string
+        required: true
+        description: "A the base tag the container image should be available under."
+      imageTagSuffix:
+        type: string
+        required: false
+        description: "A tag suffix that should get applied to all generated tags."
       imageLabels:
         type: string
         required: false
@@ -51,7 +59,7 @@ jobs:
       - name: "Install qemu dependency"
         uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v2
 
       - name: "Checkout Container Repository"
@@ -69,18 +77,36 @@ jobs:
       - name: "Copy container Folder"
         run: cp -r jellyfin-container/${{ inputs.containerSpec }}/* jellyfin-code
 
-      - name: Login to GitHub Container Registry
+      - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ secrets.ghc_usr }}
           password: ${{ secrets.ghc_tkn }}
 
+      - name: "Gather Container Image Facts"
+        id: imageFacts
+        uses: docker/metadata-action@v4
+        with:
+          images: |-
+            ghcr.io/${{ github.repository_owner }}/${{ inputs.imageName }}
+            docker.io/jellyfin/${{ inputs.imageName }},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
+            quay.io/jellyfin/${{ inputs.imageName }},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
+          flavor: |-
+            suffix=${{ inputs.imageTagSuffix }},onlatest=true
+          tags: |-
+            type=semver,pattern={{version}},value=${{ inputs.imageTag }},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.imageTag }},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
+            type=raw,value=${{ inputs.imageTag }},enable=${{ ! startsWith(github.ref, 'refs/heads/release-') }}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
+            type=raw,value=unstable,enable=${{ ! startsWith(github.ref, 'refs/heads/release-') }}
+          labels: ${{ inputs.imageLabels }}
+
       - name: "Build and Push Container Image"
         uses: docker/build-push-action@v3
         with:
-          tags: ${{ inputs.imageTags }}
-          labels: ${{ inputs.imageLabels }}
+          tags: ${{ steps.imageFacts.outputs.tags }}
+          labels: ${{ steps.imageFacts.outputs.labels }}
           file: jellyfin-code/${{ inputs.containerfile }}
           context: jellyfin-code
           platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
