--- a/.github/workflows/build-server.yaml
+++ b/.github/workflows/build-server.yaml
@@ -27,8 +27,6 @@ jobs:
       appRepo: ${{ steps.variables.outputs.APP_REPO }}
       appGitSha: ${{ steps.variables.outputs.APP_GIT_SHA }}
       appVersion: ${{ steps.variables.outputs.APP_VERSION }}
-      imgTags: ${{ steps.imageFacts.outputs.tags }}
-      imgLabels: ${{ steps.imageFacts.outputs.labels }}
     steps:
       - name: "Checkout Repository"
         uses: actions/checkout@v3
@@ -41,25 +39,6 @@ jobs:
           echo "APP_GIT_SHA=$(yq --exit-status '.git_sha' server/metaValues.yaml)" >> ${GITHUB_OUTPUT}
           echo "APP_VERSION=$(yq --exit-status '.version' server/metaValues.yaml)" >> ${GITHUB_OUTPUT}
 
-      - name: "Gather Container Image Facts"
-        id: imageFacts
-        uses: docker/metadata-action@v4
-        with:
-          # docker.io/jellyfin/jellyfin-server
-          # quay.io/jellyfin/jellyfin-server
-          images: |-
-            ghcr.io/${{ github.repository_owner }}/jellyfin-server
-          tags: |-
-            type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
-            type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
-            type=raw,value=${{ steps.variables.outputs.APP_VERSION }},enable=${{ ! startsWith(github.ref, 'refs/heads/release-') }}
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/heads/release-') }}
-            type=raw,value=unstable,enable=${{ ! startsWith(github.ref, 'refs/heads/release-') }}
-          labels: |-
-            org.opencontainers.image.version=${{ steps.variables.outputs.APP_VERSION }}
-            org.opencontainers.image.revision=${{ steps.variables.outputs.APP_GIT_SHA }}
-            org.opencontainers.image.source=https://github.com/${{ steps.variables.outputs.APP_REPO }}
-
 
   buildContainer:
     uses: ./.github/workflows/_meta-containerBuild.yaml
@@ -71,8 +50,17 @@ jobs:
       codeRepository: ${{ needs.gatherFacts.outputs.appRepo }}
       codeRepositoryRef: ${{ needs.gatherFacts.outputs.appGitSha }}
       containerSpec: server
-      imageTags: ${{ needs.gatherFacts.outputs.imgTags }}
-      imageLabels: ${{ needs.gatherFacts.outputs.imgLabels }}
+      imageName: jellyfin-server
+      imageTag: ${{ needs.gatherFacts.outputs.appVersion }}
+      imageLabels: |-
+        org.opencontainers.image.vendor=Jellyfin project
+        org.opencontainers.image.title=Jellyfin - The Free Software Media System - Server
+        org.opencontainers.image.description=Official Jellyfin server container image
+        org.opencontainers.image.url=https://jellyfin.org
+        org.opencontainers.image.licenses=GPL-2.0
+        org.opencontainers.image.version=${{ needs.gatherFacts.outputs.appVersion }}
+        org.opencontainers.image.revision=${{ needs.gatherFacts.outputs.appGitSha }}
+        org.opencontainers.image.source=https://github.com/${{ needs.gatherFacts.outputs.appRepo }}
       containerfile: Containerfile.debian
       publishImage: true # for now
     secrets:
